--- a/package.json
+++ b/package.json
@@ -2,54 +2,52 @@
   "name": "jjf-phonebook-backend",
   "version": "1.0.0",
   "description": "Backend API for JJF Phonebook",
-  "author": "",
   "private": true,
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
+    "start": "node dist/main",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.0.0",
-    "@nestjs/mapped-types": "^2.0.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/swagger": "^7.4.2",
-    "@nestjs/typeorm": "^10.0.0",
-    "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.0",
-    "class-validator": "^0.14.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.0",
-    "mysql2": "^3.5.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.18.0",
-    "reflect-metadata": "^0.1.0",
-    "rxjs": "^7.0.0",
-    "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.0"
+    "@nestjs/common": "10.4.22",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "10.4.22",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.22",
+    "@nestjs/serve-static": "4.0.2",
+    "@nestjs/swagger": "7.4.2",
+    "@nestjs/typeorm": "10.0.0",
+    "bcrypt": "5.1.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "mysql2": "3.9.7",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "pg": "8.11.5",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1",
+    "swagger-ui-express": "5.0.0",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.0",
-    "@types/node": "^20.0.0",
-    "eslint": "^9.18.0",
-    "jest": "^30.0.0",
-    "prettier": "^3.4.2",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.4.0",
-    "ts-node": "^10.9.0",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^5.0.0"
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/schematics": "10.1.1",
+    "@nestjs/testing": "10.4.22",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
+    "@types/node": "20.11.30",
+    "eslint": "9.18.0",
+    "jest": "29.7.0",
+    "prettier": "3.2.5",
+    "ts-jest": "29.1.2",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.3.3"
   }
 }
