--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cloudinary": "^2.9.0",
     "cors": "2.8.5",
     "express": "4.18.2",
     "mysql2": "3.9.7",
@@ -31,6 +32,7 @@
     "pg": "8.11.5",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "5.0.0",
     "typeorm": "0.3.20"
   },
