--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/testing": "10.4.22",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.11.30",
     "eslint": "9.18.0",
     "jest": "29.7.0",
